Added new admin mail

--- a/startrend-backend/.env
+++ b/startrend-backend/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=ali.qwerty32a0@gmail.com
-EMAIL_PASSWORD=ddjs dler feim whti 
+EMAIL_USER=abdulrehmanshahid486@gmail.com
+EMAIL_PASSWORD=deju ffpv mghs athd 
